--- a/404.html
+++ b/404.html
@@ -4,11 +4,63 @@ permalink: /404.html
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Hertford Ball</title>
         <meta charset="UTF-8">
-        <title>404</title>
-        <link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Roboto:300i,300" rel="stylesheet">
-	</head>
-	<body>
-        404
-	</body>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100italic,100,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="./css/style.css" type="text/css">
+        <link rel="stylesheet" href="./css/menu.css" type="text/css">
+        <link rel="stylesheet" href="./css/deet.css" type="text/css">
+        <link rel="stylesheet" href="./css/sponsors.css" type="text/css">
+
+        <!-- icons -->
+        <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./icons/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./icons/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./icons/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./icons/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./icons/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" href="./icons/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="./icons/favicon-194x194.png" sizes="194x194">
+        <link rel="icon" type="image/png" href="./icons/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="./icons/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="./icons/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="./icons/manifest.json">
+        <link rel="mask-icon" href="./icons/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#b91d47">
+        <meta name="msapplication-TileImage" content="./icons/mstile-144x144.png">
+        <meta name="theme-color" content="#b81818">
+        <script src="js/menu.js" type="text/javascript"></script>
+        <script src="js/konami.js" type="text/javascript"></script>
+
+        <script>
+
+            //var easter_egg = new Konami(function() { alert('Konami code!')});
+            //var easter_egg = new Konami("http://www.hertfordball.co.uk/konami.jpg");
+            //location.href = "http://hertfordball.co.uk/sponsors";
+
+        </script>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li id="menu" onclick="thing()" class="show"><img src="imgs/menu512.png" alt="Menu"></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="sponsors.html">Sponsors</a></li>
+                    <li><a href="http://tickets.hertfordball.co.uk">Tickets</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <div id="Title">
+                <h1>4O4</h1>
+            </div>
+        </main>
+    </body>
 </html>
+
