--- a/404.html
+++ b/404.html
@@ -9,8 +9,7 @@ permalink: /404.html
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100italic,100,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="./css/style.css" type="text/css">
         <link rel="stylesheet" href="./css/menu.css" type="text/css">
-        <link rel="stylesheet" href="./css/deet.css" type="text/css">
-        <link rel="stylesheet" href="./css/sponsors.css" type="text/css">
+        <link rel="stylesheet" href="./css/home.css" type="text/css">
 
         <!-- icons -->
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
@@ -57,8 +56,10 @@ permalink: /404.html
         </header>
 
         <main>
-            <div id="Title">
-                <h1>4O4</h1>
+            <div id="Titlefour">
+                <h1>–   404   –</h1>
+                <h1>Jei is displeased</h1>
+                <img src="imgs/bossjei.png">
             </div>
         </main>
     </body>
