--- a/newindex2.html
+++ b/newindex2.html
@@ -5,9 +5,7 @@
         <meta charset="UTF-8">
         <link href='https://fonts.googleapis.com/css?family=Roboto:100,200,300|Parisienne' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="./css/newindex2.css" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase:400,600" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet">
-        <!-- icons -->
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100" rel="stylesheet">
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-touch-icon-72x72.png">
@@ -49,9 +47,10 @@
         <!-- http://keithclark.co.uk is the mastermind behind this -->
         <div class="parallax">
             <div id="group1" class="parallax__group">
+                <div id="foottop">website by antonia siu and michael agius</div>
                 <div class="parallax__layer parallax__layer--base">
-                    <img id="logo" src="newimg/birdfo1.png">
-                    <h1>paradise<br>found</h1>
+                    <img id="logo" src="newimg/birdfo3.png">
+                    <p>paradise<br>found</p>
                 </div>
             </div>
             <div id="group2" class="parallax__group">
