--- a/newindex2.html
+++ b/newindex2.html
@@ -3,9 +3,7 @@
     <head>
         <title>Hertford Ball 2017</title>
         <meta charset="UTF-8">
-        <link href='https://fonts.googleapis.com/css?family=Roboto:100,200,300|Parisienne' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="./css/newindex2.css" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100" rel="stylesheet">
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-touch-icon-72x72.png">
@@ -49,13 +47,13 @@
             <div id="group1" class="parallax__group">
                 <div id="foottop">website by antonia siu and michael agius</div>
                 <div class="parallax__layer parallax__layer--base">
-                    <img id="logo" src="newimg/birdfo3.png">
-                    <p>paradise<br>found</p>
+                    <h1>paradise found</h1>
+                    <p>tickets on sale friday of 3<sup>rd</sup> week michaelmas</p>
                 </div>
             </div>
             <div id="group2" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
-                    <div class="title">HERTFORD BALL 2017</div>
+                    <div class="title">Hertford Ball 2017</div>
                 </div>
                 <div class="parallax__layer parallax__layer--back">
                 </div>
@@ -86,7 +84,82 @@
             </div>
             <div id="group7" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
-                    <div class="title">Base Layer</div>
+                    <div class="centre">
+                        <div id="leftcontact">
+                            <div class="Deet">
+                                <h1>President</h1>
+                                <h2>Jei Diwakar</h2>
+                                <h3><a href="mailto:president@hertfordball.co.uk">
+                                    president&#64;hertfordball.co.uk
+                                </a></h3>
+                            </div>
+                            <div class="Deet">
+                                <h1>Sponsorship</h1>
+                                <h2>Jong Kwon</h2>
+                                <h3><a href="mailto:sponsorship@hertfordball.co.uk">
+                                    sponsorship&#64;hertfordball.co.uk
+                                </a></h3>
+                            </div>
+                            <div class="Deet">
+                                <h1>Marketing</h1>
+                                <h2>Ellie Foster</h2>
+                                <h3><a href="mailto:marketing@hertfordball.co.uk">
+                                    marketing&#64;hertfordball.co.uk
+                                </a></h3>
+                            </div>
+                            <div class="Deet">
+                                <h1>Logistics</h1>
+                                <h2>Beth Partridge</h2>
+                                <h3><a href="mailto:logistics@hertfordball.co.uk">
+                                    logistics&#64;hertfordball.co.uk
+                                </a></h3>
+                            </div>
+                            <div class="Deet">
+                                <h1>Tech Director</h1>
+                                <h2>Michael Agius</h2>
+                                <h3><a href="mailto:nerd@michaelagius.uk">
+                                    nerd&#64;michaelagius.uk
+                                </a></h3>
+                            </div>
+                        </div>
+                        <div id="rightcontact">
+                            <div class="Deet">
+                                <h1>Vice President</h1>
+                                <h2>Justine Raoult</h2>
+                                <h3><a href="mailto:vicepresident@hertfordball.co.uk">
+                                    vicepresident&#64;hertfordball.co.uk
+                                </a></h3>
+                            </div>
+                            <div class="Deet">
+                                <h1>Secretary</h1>
+                                <h2>Hae Jin Yang</h2>
+                                <h3><a href="mailto:secretary@hertfordball.co.uk">
+                                    secretary&#64;hertfordball.co.uk
+                                </a></h3>
+                            </div>
+                            <div class="Deet">
+                                <h1>Treasurer</h1>
+                                <h2>Holly Wagstaff</h2>
+                                <h3><a href="mailto:treasurer@hertfordball.co.uk">
+                                    treasurer&#64;hertfordball.co.uk
+                                </a></h3>
+                            </div>
+                            <div class="Deet">
+                                <h1>Health and Safety</h1>
+                                <h2>Michael Agius</h2>
+                                <h3><a href="mailto:safety@hertfordball.co.uk">
+                                    safety&#64;hertfordball.co.uk
+                                </a></h3>
+                            </div>
+                            <div class="Deet">
+                                <h1>Food and Drink</h1>
+                                <h2>Chloë Jacklin &amp; Aditi Aggarwal</h2>
+                                <h3><a href="mailto:catering@hertfordball.co.uk">
+                                    catering&#64;hertfordball.co.uk
+                                </a></h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
