--- a/newindex2.html
+++ b/newindex2.html
@@ -47,44 +47,110 @@
             <div id="group1" class="parallax__group">
                 <div id="foottop">website by antonia siu and michael agius</div>
                 <div class="parallax__layer parallax__layer--base">
-                    <h1>paradise found</h1>
-                    <p>tickets on sale friday of 3<sup>rd</sup> week michaelmas</p>
+                    <div id="header" class="centre">
+                        <h1>paradise found</h1>
+                        <p>tickets on sale friday of 3<sup>rd</sup> week michaelmas</p>
+                    </div>
                 </div>
             </div>
             <div id="group2" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
-                    <div class="title">Hertford Ball 2017</div>
+                    <div class="centre textblock shadowed">
+                        <h1>About</h1>
+                        <p>The lights went down at the Miller Theater, but not a
+                            note was played. Then a voice rose above the muffled
+                            sounds of the crowd, followed by another, and then
+                            another: Martin Luther King, Jr.’s “I Have a Dream”
+                            speech, interlaced with words by Malcolm X and
+                            Muhammad Ali. The three men’s tones resonated with
+                            the rhythm of the African djembe beating in the
+                            backdrop. Soon, Christian McBride’s anticipated bass
+                            riff joined the refrain. The great speeches faded
+                            along with the drum line, and the jazz took hold, as
+                            was permissible since the foundation had been laid:
+                            Jazz is a music, a history, a culture. That is,
+                            African-American culture is intrinsic to jazz.</p>
+                    </div>
                 </div>
                 <div class="parallax__layer parallax__layer--back">
                 </div>
             </div>
             <div id="group3" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
-                    <div class="title">Base Layer</div>
+                    <div class="centre textblock">
+                        <h1>Entertainment</h1>
+                        <p>The lights went down at the Miller Theater, but not a
+                            note was played. Then a voice rose above the muffled
+                            sounds of the crowd, followed by another, and then
+                            another: Martin Luther King, Jr.’s “I Have a Dream”
+                            speech, interlaced with words by Malcolm X and
+                            Muhammad Ali. The three men’s tones resonated with
+                            the rhythm of the African djembe beating in the
+                            backdrop. Soon, Christian McBride’s anticipated bass
+                            riff joined the refrain. The great speeches faded
+                            along with the drum line, and the jazz took hold, as
+                            was permissible since the foundation had been laid:
+                            Jazz is a music, a history, a culture. That is,
+                            African-American culture is intrinsic to jazz.</p>
+                    </div>
                 </div>
             </div>
             <div id="group4" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
-                    <div class="title">Base Layer</div>
+                    <div class="centre textblock shadowed">
+                        <h1>Food &amp; Drink</h1>
+                        <p>The lights went down at the Miller Theater, but not a
+                            note was played. Then a voice rose above the muffled
+                            sounds of the crowd, followed by another, and then
+                            another: Martin Luther King, Jr.’s “I Have a Dream”
+                            speech, interlaced with words by Malcolm X and
+                            Muhammad Ali. The three men’s tones resonated with
+                            the rhythm of the African djembe beating in the
+                            backdrop. Soon, Christian McBride’s anticipated bass
+                            riff joined the refrain. The great speeches faded
+                            along with the drum line, and the jazz took hold, as
+                            was permissible since the foundation had been laid:
+                            Jazz is a music, a history, a culture. That is,
+                            African-American culture is intrinsic to jazz.</p>
+                    </div>
                 </div>
                 <div class="parallax__layer parallax__layer--back">
                 </div>
             </div>
             <div id="group5" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
-                    <div class="title">Base Layer</div>
+                    <div class="centre textblock">
+                        <h1>Sponsors</h1>
+                        <p>The lights went down at the Miller Theater, but not a
+                            note was played. Then a voice rose above the muffled
+                            sounds of the crowd, followed by another, and then
+                            another: Martin Luther King, Jr.’s “I Have a Dream”
+                            speech, interlaced with words by Malcolm X and
+                            Muhammad Ali. The three men’s tones resonated with
+                            the rhythm of the African djembe beating in the
+                            backdrop. Soon, Christian McBride’s anticipated bass
+                            riff joined the refrain. The great speeches faded
+                            along with the drum line, and the jazz took hold, as
+                            was permissible since the foundation had been laid:
+                            Jazz is a music, a history, a culture. That is,
+                            African-American culture is intrinsic to jazz.</p>
+                    </div>
                 </div>
             </div>
             <div id="group6" class="parallax__group">
                 <div class="parallax__layer parallax__layer--back">
                 </div>
                 <div class="parallax__layer parallax__layer--base">
-                    <div class="title">Base Layer</div>
+                    <div class="centre textblock shadowed">
+                        <h1>Tickets</h1>
+                        <a id="buytickets">buy tickets</a>
+                    </div>
                 </div>
             </div>
             <div id="group7" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
-                    <div class="centre">
+                    <div class="centre textblock">
+                        <h1>Committee</h1>
                         <div id="leftcontact">
                             <div class="Deet">
                                 <h1>President</h1>
