--- a/newindex2.html
+++ b/newindex2.html
@@ -88,9 +88,7 @@
                         <div class="rotateleft postcard">
                             <img id="pimgparavion" src="newimg/paravionstamp.png">
                             <img id="pimgwavyline" src="newimg/wavylinestamp.png">
-                            <img id="pimgparadise" src="newimg/paradisestamp.png">
-                            <div class="postcardleft"></div>
-                            <div class="postcardright">
+                            <div class="postcardleft">
                                 <h1>Entertainment</h1>
                                 <p>The lights went down at the Miller Theater, but not a
                                     note was played. Then a voice rose above the muffled
@@ -101,6 +99,12 @@
                                     the rhythm of the African djembe beating in the
                                     backdrop.</p>
                             </div>
+                            <div class="postcardright">
+                                <p>Hertford College</p>
+                                <p>Catte Street</p>
+                                <p>Oxford</p>
+                                <p>OX1 3BW</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -108,7 +112,7 @@
             <div id="group4" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
                     <div class="centre textblock shadowed">
-                        <h1>Food &amp; Drink</h1>
+                        <h1>Sponsors</h1>
                         <p>The lights went down at the Miller Theater, but not a
                             note was played. Then a voice rose above the muffled
                             sounds of the crowd, followed by another, and then
@@ -129,21 +133,26 @@
             </div>
             <div id="group5" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
-                    <div class="centre textblock">
-                        <h1>Sponsors</h1>
-                        <p>The lights went down at the Miller Theater, but not a
-                            note was played. Then a voice rose above the muffled
-                            sounds of the crowd, followed by another, and then
-                            another: Martin Luther King, Jr.’s “I Have a Dream”
-                            speech, interlaced with words by Malcolm X and
-                            Muhammad Ali. The three men’s tones resonated with
-                            the rhythm of the African djembe beating in the
-                            backdrop. Soon, Christian McBride’s anticipated bass
-                            riff joined the refrain. The great speeches faded
-                            along with the drum line, and the jazz took hold, as
-                            was permissible since the foundation had been laid:
-                            Jazz is a music, a history, a culture. That is,
-                            African-American culture is intrinsic to jazz.</p>
+                    <div class="centre">
+                        <div class="rotateright postcard">
+                            <img id="pimgparavion" src="newimg/paravionstamp.png">
+                            <img id="pimgwavyline" src="newimg/wavylinestamp.png">
+                            <div class="postcardleft">
+                                <h1>Food &amp; Drink</h1>
+                                <p>Soon, Christian McBride’s anticipated bass
+                                    riff joined the refrain. The great speeches faded
+                                    along with the drum line, and the jazz took hold, as
+                                    was permissible since the foundation had been laid:
+                                    Jazz is a music, a history, a culture. That is,
+                                    African-American culture is intrinsic to jazz.</p>
+                            </div>
+                            <div class="postcardright">
+                                <p>Hertford College</p>
+                                <p>Catte Street</p>
+                                <p>Oxford</p>
+                                <p>OX1 3BW</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
