--- a/newindex2.html
+++ b/newindex2.html
@@ -87,6 +87,7 @@
                     <div class="centre">
                         <div class="rotateleft postcard">
                             <img id="pimgparavion" src="newimg/paravionstamp.png">
+                            <img id="pimgparadise" src="newimg/paradisestamp.png">
                             <img id="pimgwavyline" src="newimg/wavylinestamp.png">
                             <div class="postcardleft">
                                 <h1>Entertainment</h1>
@@ -136,6 +137,7 @@
                     <div class="centre">
                         <div class="rotateright postcard">
                             <img id="pimgparavion" src="newimg/paravionstamp.png">
+                            <img id="pimgparadise" src="newimg/paradisestamp.png">
                             <img id="pimgwavyline" src="newimg/wavylinestamp.png">
                             <div class="postcardleft">
                                 <h1>Food &amp; Drink</h1>
