--- a/sponsors.html
+++ b/sponsors.html
@@ -44,11 +44,7 @@
         <header>
             <nav>
                 <ul>
-                    <li id="menu" onclick="thing()" class="show"><img src="imgs/menu512.png" alt="Menu"></li>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="sponsors.html">Sponsors</a></li>
-                    <li><a href="http://tickets.hertfordball.co.uk">Tickets</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="newindex2.html">back</a></li>
                 </ul>
             </nav>
         </header>
