change stamp and fix css files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./css/newindex2.css" type="text/css">
+        <link rel="stylesheet" href="./css/index.css" type="text/css">
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-touch-icon-72x72.png">
@@ -75,10 +75,10 @@
                 <div class="parallax__layer parallax__layer--base">
                     <div class="centre">
                         <div class="rotateright postcard">
-                            <img id="pimgparavion" src="newimg/paravionstamp.png">
-                            <img id="pimgparadise" src="newimg/paradisestamp.png">
-                            <img id="pimgwavyline" src="newimg/wavylinestamp.png">
-                            <img id="pimglogo" src="newimg/logo.png">
+                            <img id="pimgparavion" src="imgs/paravionstamp.png">
+                            <img id="pimgparadise" src="imgs/paradisestamp.png">
+                            <img id="pimgwavyline" src="imgs/wavylinestamp.png">
+                            <img id="pimglogo" src="imgs/stamp.png">
                             <div class="postcardleft">
                                 <h1>Theme</h1>
                                 <p>Soon, Christian McBride’s anticipated bass
@@ -102,10 +102,10 @@
                 <div class="parallax__layer parallax__layer--base">
                     <div class="centre">
                         <div class="rotateleft postcard">
-                            <img id="pimgparavion" src="newimg/paravionstamp.png">
-                            <img id="pimgparadise" src="newimg/paradisestamp.png">
-                            <img id="pimgwavyline" src="newimg/wavylinestamp.png">
-                            <img id="pimglogo" src="newimg/logo.png">
+                            <img id="pimgparavion" src="imgs/paravionstamp.png">
+                            <img id="pimgparadise" src="imgs/paradisestamp.png">
+                            <img id="pimgwavyline" src="imgs/wavylinestamp.png">
+                            <img id="pimglogo" src="imgs/stamp.png">
                             <div class="postcardleft">
                                 <h1>Entertainment</h1>
                                 <p>The lights went down at the Miller Theater, but not a
@@ -130,10 +130,10 @@
                 <div class="parallax__layer parallax__layer--base">
                     <div class="centre">
                         <div class="rotateright postcard">
-                            <img id="pimgparavion" src="newimg/paravionstamp.png">
-                            <img id="pimgparadise" src="newimg/paradisestamp.png">
-                            <img id="pimgwavyline" src="newimg/wavylinestamp.png">
-                            <img id="pimglogo" src="newimg/logo.png">
+                            <img id="pimgparavion" src="imgs/paravionstamp.png">
+                            <img id="pimgparadise" src="imgs/paradisestamp.png">
+                            <img id="pimgwavyline" src="imgs/wavylinestamp.png">
+                            <img id="pimglogo" src="imgs/stamp.png">
                             <div class="postcardleft">
                                 <h1>Food &amp; Drink</h1>
                                 <p>Soon, Christian McBride’s anticipated bass
