--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 
 
-
+        <link rel="stylesheet" href="./css/index.css">
 
         <meta charset="UTF-8">
-        
+
         <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
         <link rel="icon" type="image/png" href="/icons/favicon-32x32.png" sizes="32x32">
         <link rel="icon" type="image/png" href="/icons/favicon-16x16.png" sizes="16x16">
@@ -22,7 +22,7 @@
         <meta name="application-name" content="Hertford Ball">
         <meta name="msapplication-config" content="/icons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
-        
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="js/konami.js" type="text/javascript"></script>
         <script src="js/mikeycode.js" type="text/javascript"></script>
