--- a/sponsors.html
+++ b/sponsors.html
@@ -44,7 +44,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="newindex2.html">back</a></li>
+                    <li><a href="index.html">back</a></li>
                 </ul>
             </nav>
         </header>
