--- a/index.html
+++ b/index.html
@@ -150,6 +150,28 @@
             </div>
             <div id="group5" class="parallax__group">
                 <div class="parallax__layer parallax__layer--base">
+                    <div class="centre">
+                        <div class="rotateleft postcard">
+                            <img id="pimgparavion" src="imgs/paravionstamp.png">
+                            <img id="pimgparadise" src="imgs/paradisestamp.png">
+                            <img id="pimgwavyline" src="imgs/wavylinestamp.png">
+                            <img id="pimglogo" src="imgs/stamp.png">
+                            <div class="postcardleft">
+                                <h1>Fuck knows</h1>
+                                <p>Soon, Christian McBride’s anticipated bass
+                                    riff joined the refrain. The great speeches faded
+                                    along with the drum line, and the jazz took hold, as
+                                    was permissible since the foundation had been laid:
+                                    Jazz is a music, a history, a culture. That is,
+                                    African-American culture is intrinsic to jazz.</p>
+                            </div>
+                            <div class="postcardright">
+                                <p>Hertford College</p>
+                                <p>Catte Street</p>
+                                <p>Oxford</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="group6" class="parallax__group">
@@ -157,10 +179,27 @@
                 </div>
                 <div class="parallax__layer parallax__layer--base">
 
-                    <div class="centre textblock shadowed">
-                        <h1>Sponsors</h1>
-                        <a class="button" href="sponsors.html">view our sponsorship packages</a>
-                        <a class="button" href="mailto:sponsorship@hertfordball.co.uk">contact our sponsorship guy</a>
+                    <div class="centre">
+                        <div class="rotateright postcard">
+                            <img id="pimgparavion" src="imgs/paravionstamp.png">
+                            <img id="pimgparadise" src="imgs/paradisestamp.png">
+                            <img id="pimgwavyline" src="imgs/wavylinestamp.png">
+                            <img id="pimglogo" src="imgs/stamp.png">
+                            <div class="postcardleft">
+                                <h1>Sponsors</h1>
+                                <a class="button" href="sponsors.html">
+                                    view our sponsorship packages
+                                </a>
+                                <a class="button" href="mailto:sponsorship@hertfordball.co.uk">
+                                    contact our sponsorship guy
+                                </a>
+                            </div>
+                            <div class="postcardright">
+                                <p>Hertford College</p>
+                                <p>Catte Street</p>
+                                <p>Oxford</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
