--- a/index.html
+++ b/index.html
@@ -23,24 +23,10 @@
         <meta name="msapplication-config" content="/icons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="js/konami.js" type="text/javascript"></script>
         <script src="js/mikeycode.js" type="text/javascript"></script>
-        <script type=text/javascript>
-            function flashUnfinished(){
-                alert("This part of the website isn't yet ready.\napologies etc");
-            }
-            function scroll(n){
-                console.log(n);
-                $('html, body').animate({scrollTop: $('#group' + n).offset().top - 20}, 1000);
-            }
-
-            //var easter_egg = new Konami(function() { alert('Konami code!')});
-            //var easter_egg = new Konami("imgs/konami.jpg");
-            //location.href = "http://hertfordball.co.uk"
-            //var easter_egg2 = new MikeyCode("http://www.shortbrazilianman.com");
-
-        </script>
+        <script src="js/scroll.js" type="text/javascript"></script>
     </head>
     <body>
         <!-- http://keithclark.co.uk is the mastermind behind this -->
@@ -55,11 +41,11 @@
                         </div>
                         <nav class="introtext">
                             <ul>
-                                <li onclick="scroll(2)">theme</li>
-                                <li onclick="scroll(3)">entertainment</li>
-                                <li onclick="scroll(4)">food &amp; drink</li>
-                                <li onclick="scroll(6)">sponsors</li>
-                                <li onclick="scroll(7)">committee</li>
+                                <li onclick="scrollToSection(2)">theme</li>
+                                <li onclick="scrollToSection(3)">entertainment</li>
+                                <li onclick="scrollToSection(4)">food &amp; drink</li>
+                                <li onclick="scrollToSection(6)">sponsors</li>
+                                <li onclick="scrollToSection(7)">committee</li>
                             </ul>
                         </nav>
                     </div>
